# cmake_test_dowloadable

./: CMakeLists.txt
cmake/: GTest.cmake
header/: superfunc.hpp
tests/: CMakeLists.txt
tests/BasicTests/: CMakeLists.txt  basictest.cpp
